k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: client-deployment
spec: 
    replicas: 3
    #selector can be used for deployment to find the pods and manage them by using label such as {component web}
    selector:
        matchLabels:
            component: web
    template:
        metadata:
            labels:
                component: web
        spec:
            containers:
                - name: client
                  image: alanyeung95/multi-client
                  ports:
                      - containerPort: 3000
