k8s/worker-depoyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: worker-deployment
spec: 
    replicas: 1 
    selector:
        matchLabels:
            component: worker 
    template:
        metadata:
            labels:
                component: worker 
        spec:
            containers:
                - name: client
                  image: stephengrider/multi-worker
