k8s/ingress-service.yaml
# local dev
# apiVersion: networking.k8s.io/v1beta1
# cloud config
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    rules:
        - http:
            paths:
                - path: /?(.*)
                  backend:
                      serviceName: client-cluster-ip-service
                      servicePort: 3000
                - path: /api/?(.*) 
                  backend:
                      serviceName: server-cluster-ip-service
                      servicePort: 5000
